# dev-practice

./: README.md
certification-management/: README.md  paintext.txt
certification-management/docs/: 01-fundamentals.md  02-ssl-tls-protocol.md  03-https.md  04-mtls.md  05-certificate-management.md  06-gcp-gke-practice.md
certification-management/examples/nodejs/: tls-demo.js
certification-management/examples/python/: tls_demo.py
certification-management/kubernetes/cert-manager/: issuer.yaml
certification-management/kubernetes/gke-ingress/: managed-cert.yaml
certification-management/kubernetes/istio-mtls/: mtls-policy.yaml
certification-management/scripts/: check-tls-endpoint.sh  generate-ca.sh  generate-client-cert.sh  generate-server-cert.sh  verify-cert-chain.sh
configuration-management/: README.md
configuration-management/config/: config-schema.yaml  config.local.yaml
configuration-management/docs/: environment-strategy.md  gke-deployment.md  secret-management.md  tls-ssl-configuration.md
configuration-management/examples/: env.template
configuration-management/examples/go/: go.mod
configuration-management/examples/nodejs/: package.json
configuration-management/examples/python/: pyproject.toml
configuration-management/examples/python/config/: loader.py  test_loader.py
configuration-management/kubernetes/base/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  (+2 more)
configuration-management/scripts/: check-secrets.sh  post-deploy-check.sh  pre-deploy-check.sh  validate-config.sh
database-comparison/: alloydb-vs-doris.md
(+14 files in other folders)
